Clean code.